# meerkat-monochrome

./: .gitattributes  README.md  dimensions.txt
board/: .gitignore  board.csv  board.kicad_pcb  board.kicad_prl  board.kicad_pro  board.kicad_sch  board.xml  fp-info-cache  fram.kicad_sch  mcu.kicad_sch  power.kicad_sch  sdcard.kicad_sch  sensor.kicad_sch  sym-lib-table  untitled.kicad_sch
board/components/: ABM8-272-T3.mod  AOTA-B201610S3R3-101-T.kicad_mod  DF52-12S-0.8H_21_.stp  FM25L16B-DG.kicad_mod  FM25L16B-DG.kicad_sym  FM25L16B-DG.mod  FM25L16B-DG.stp  LM66100DCKR.bak  LM66100DCKR.kicad_mod  LM66100DCKR.kicad_sym  LM66100DCKR.mod  MEM2085-00-115-00-A.bak  MEM2085-00-115-00-A.kicad_sym  MEM2085-00-115-00-A.mod  MEM2085-00-115-00-A.stp  MEM20850011500A.kicad_mod  MT9M001C12STM.bak  MT9M001C12STM.kicad_mod  MT9M001C12STM.kicad_sym  NC7SZ11P6X.bak  NC7SZ11P6X.kicad_mod  NC7SZ11P6X.kicad_sym  NC7SZ11P6X.mod  NC7SZ11P6X.stp  NCP189CMTW330TAG.kicad_mod  NCP189CMTW330TAG.kicad_sym  NCP189CMTW330TAG.mod  RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod  RP2350-QFN-60.kicad_sym  R_0402_1005Metric_small_pads.kicad_mod  W25Q128JVPIQ.bak  W25Q128JVPIQ.kicad_mod  W25Q128JVPIQ.kicad_sym  W25Q128JVPIQ.mod  c-mount-03.bak  c-mount-03.kicad_mod
board/sensor-board/: sensor-board.kicad_pcb  sensor-board.kicad_prl  sensor-board.kicad_pro  sensor-board.kicad_sch
boards/sensor-board/: .gitignore  sensor-board.kicad_pcb  sensor-board.kicad_prl  sensor-board.kicad_pro  sensor-board.kicad_sch
docs/: Camera module 130W MT9M001 1_2 large target black and white with FPGA development board _ AliExpress.mhtml  Debugging summary of the official camera mt9m001 based on the iCamera test photoelectric competition- Layers of Storms- Blog Garden.mhtml  MT9M001.mhtml  gain-iso.txt
docs/cam10/: 1000ms-dark.fit  2000ms-dark.fit  (+1 more)
firmware/: Cargo.toml  README.md  build.rs
firmware/src/: filesystem.rs  fram.rs  main.pio  main.rs  psram.rs  sdmmc.rs  sensor.rs  tiff.rs
mt9m001/: Cargo.toml  README.md  generator.py  mt9m001.json
mt9m001-dev/: Cargo.toml
sd-card/: Cargo.toml
tools/: convert.py
(+28 files in other folders)
