[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-rp = { version = "0.9.0", git = "https://github.com/altundag/embassy.git", branch = "fix-psram-max-select-units", features = [
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "run-from-ram",
] }

embassy-embedded-hal = { version = "0.5.0", git = "https://github.com/altundag/embassy.git", branch = "fix-psram-max-select-units" }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.5.0", git = "https://github.com/altundag/embassy.git", branch = "fix-psram-max-select-units", features = [
    "defmt-timestamp-uptime",
] }
embassy-futures = "0.1.2"
embedded-hal-bus = { version = "0.1" }
embedded-sdmmc = "0.9.0"
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
fixed = "1.29.0"

mt9m001 = { path = "../mt9m001" }
